contact form fixed on mobile devices

--- a/app/main/static/css/style.css
+++ b/app/main/static/css/style.css
@@ -729,6 +729,10 @@ a.back-to-top {
     .contact-form .send-btn {
         width: 50%;
     }
+
+    #attachment-container input[type="file"] {
+        width: 78%;
+    }
 }
 
 
